set(LLVM_LINK_COMPONENTS
  Support
  )

add_llvm_tool(hirtool
 hirtool.cpp
)
llvm_update_compile_flags(hirtool)
target_link_libraries(hirtool
  PRIVATE
  CIRCTAffineToHIR
  CIRCTHIRCosim
  CIRCTAnalysisTestPasses
  CIRCTExportVerilog
  CIRCTHIR
  CIRCTHIRTransforms
  CIRCTHIRToHW
  CIRCTHW
  CIRCTHWArith
  CIRCTHWArithToHW
  CIRCTHWTransforms
  CIRCTScheduling
  CIRCTSchedulingTestPasses
  CIRCTSSP
  CIRCTSV
  CIRCTSVTransforms
  CIRCTHWArith
  CIRCTTransforms

  MLIRIR
  MLIRMemRefDialect
  MLIROptLib
  MLIRParser
  MLIRFuncDialect
  MLIRSupport
  MLIRTransforms
  MLIRSCFDialect
  MLIRAffineDialect
)
